--- a/SICTI-FRONTEND/package.json
+++ b/SICTI-FRONTEND/package.json
@@ -8,13 +8,13 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/compiler-cli": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
+    "@angular/common": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/compiler-cli": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/forms": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
@@ -23,48 +23,16 @@
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.21",
-    "@angular/router": "2.0.0-rc.1",
-    "angular2-jwt": "0.1.16",
-    "angular2-materialize": "3.0.0",
-    "cordova-paramedic": "0.5.0",
-    "es6-shim": "0.35.0",
-    "reflect-metadata": "0.1.3",
-    "validator.ts": "0.2.2"
+"validator.ts": "0.2.2",
+    "angular2-materialize": "3.0.0"   
   },
+
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.43",
+   "@ionic/app-scripts": "0.0.43",
     "typescript": "2.0.6",
-    "angular2-materialize": "3.0.0",
-    "browserify": "13.0.1",
-    "browserify-istanbul": "2.0.0",
-    "codecov.io": "0.1.6",
-    "del": "2.2.0",
-    "gulp": "3.9.1",
-    "gulp-tslint": "5.0.0",
-    "gulp-typescript": "2.13.6",
-    "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "1.1.0",
-    "ionic-gulp-fonts-copy": "1.0.0",
-    "ionic-gulp-html-copy": "1.0.0",
-    "ionic-gulp-sass-build": "1.0.0",
-    "ionic-gulp-scripts-copy": "2.0.0",
-    "isparta": "4.0.0",
-    "jasmine-core": "2.4.1",
-    "karma": "1.1.0",
-    "karma-browserify": "5.0.5",
-    "karma-chrome-launcher": "1.0.1",
-    "karma-coverage": "1.0.0",
-    "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "2.0.4",
-    "karma-phantomjs-launcher": "1.0.1",
-    "phantomjs-prebuilt": "2.1.7",
-    "run-sequence": "1.1.5",
-    "traceur": "0.0.111",
-    "ts-node": "0.9.3",
-    "tsify": "0.16.0",
-    "tslint": "3.13.0",
-    "watchify": "3.7.0"
+    "angular2-materialize": "3.0.0"
   },
+
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
     "cordova-plugin-statusbar",
