--- a/SICTI-FRONTEND/package.json
+++ b/SICTI-FRONTEND/package.json
@@ -7,6 +7,19 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  "browserify": {
+   "transform": [
+     "browserify-shim"
+   ]
+ },
+ "browser": {
+   "jquery": "./node_modules/jquery/dist/jquery.js",
+   "materialize": "./node_modules/materialize-css/bin/materialize.js"
+ },
+ "browserify-shim": {
+   "jquery": "$",
+   "materialize": "materialize"
+ },
   "dependencies": {
     "@angular/common": "2.1.1",
     "@angular/compiler": "2.1.1",
@@ -18,21 +31,22 @@
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
+    "angular2-materialize": "^3.0.0",
+    "hammerjs": "^2.0.8",
     "ionic-angular": "2.0.0-rc.2",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.97.8",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.21",
-"validator.ts": "0.2.2",
-    "angular2-materialize": "3.0.0"   
+    "validator.ts": "0.2.2",
+    "zone.js": "0.6.21"
   },
-
   "devDependencies": {
-   "@ionic/app-scripts": "0.0.43",
+    "@ionic/app-scripts": "0.0.43",
     "typescript": "2.0.6",
     "angular2-materialize": "3.0.0"
   },
-
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
     "cordova-plugin-statusbar",
